--- a/CNNs/DenseNet121.ipynb
+++ b/CNNs/DenseNet121.ipynb
@@ -28,6 +28,7 @@
         "import tensorflow\n",
         "\n",
         "import pandas as pd\n",
+        "import h5py\n",
         "import numpy as np\n",
         "import os\n",
         "import keras\n",
@@ -2717,6 +2718,9 @@
         "               verbose=2,\n",
         "               callbacks=[anne, checkpoint],\n",
         "               validation_data=(xtrain, ytrain))"
+        "with h5py.File('model_history.h5', 'w') as file:,\n"
+        "    for key, value in history.history.items():,\n"
+        "    file.create_dataset(key, data=value), \n"
       ],
       "metadata": {
         "id": "gQEwUM3DvAWj",
