--- a/CNNs/DenseNet121.ipynb
+++ b/CNNs/DenseNet121.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZJ/4pRrkyr9Jg4SBT40sa"
+      "authorship_tag": "ABX9TyMOnT29EtjieoAecrMCGj6y",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -18,6 +19,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Shrivastavadev/Retinal-Disease-detection-using-ML/blob/main/CNNs/DenseNet121.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -26,9 +37,8 @@
       "outputs": [],
       "source": [
         "import tensorflow\n",
-        "\n",
-        "import pandas as pd\n",
         "import h5py\n",
+        "import pandas as pd\n",
         "import numpy as np\n",
         "import os\n",
         "import keras\n",
@@ -61,6 +71,15 @@
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "71yPD73xl2zX"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2717,10 +2736,12 @@
         "               epochs=50,\n",
         "               verbose=2,\n",
         "               callbacks=[anne, checkpoint],\n",
-        "               validation_data=(xtrain, ytrain))"
-        "with h5py.File('model_history.h5', 'w') as file:,\n"
-        "    for key, value in history.history.items():,\n"
-        "    file.create_dataset(key, data=value), \n"
+        "               validation_data=(xtrain, ytrain))\n",
+        "model_history_path = \"/content/drive/MyDrive/dataset_ML/RFMiD/history/DensNet121.h5\"\n",
+        "with h5py.File(model_history_path, 'w') as file:\n",
+        "    for key, value in history.history.items():\n",
+        "        file.create_dataset(key, data=value)\n",
+        "\n"
       ],
       "metadata": {
         "id": "gQEwUM3DvAWj",
